--- a/index.html
+++ b/index.html
@@ -9,8 +9,8 @@
         <table > <!-- here to show all the info. side of photo we put that info in the table tag-->
             <tr>
                 <td> <img src="images.jpg" alt="jy ho"></td>
-                <td> <h1>Anuj pandey </h1>
-                    <p><em>student of shri ram institute of technology department of <a href="https://developer.mozilla.org/en-US/docs/Web/HTML/Element/img"><strong> Electrical Engineering </strong></a></em></p>
+                <td> <h1>MANOJ KUMAR </h1>
+                    <p><em>student of SRG department of <!--<a href="https://developer.mozilla.org/en-US/docs/Web/HTML/Element/img">--><strong> Electrical Engineering </strong></a></em></p>
                     <!-- em is used for italic-->
                     <p>i am web devloper  </p>
                 </td>
